<resources>
    <string name="app_name">Buku Saku Online</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="masuk">Masuk</string>
    <string name="masuk_untuk_melanjutkan">Masuk Untuk Melanjutkan</string>
    <string name="history">History</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="search_">goleki</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pengaduan">Pengaduan</string>
    <string name="mapel">Mapel</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="jumlah_pelaporan">Jumlah Pelaporan</string>
    <string name="t">TextView</string>
    <string name="bantuan">Bantuan</string>
    <string name="keluar">Keluar</string>
    <string name="detail_pelanggaran">Detail Pelanggaran</string>
    <string name="detail_peraturan">Peraturan dan Pasal</string>
    <string name="detail_1">BAB I Ketentuan Umum</string>
    <string name="detail_2">Pasal I Definisi Istilah</string>
    <string name="kelas">Kelas</string>
    <string name="kategori_pelanggaran">Pilih Kategori</string>
    <string name="point_pelanggaran">Point Pelanggaran</string>
    <string name="aturan_yang_dilanggar">Aturan yang dilanggar</string>
    <string name="pelapor">Pelapor</string>
    <string name="bukti">Bukti</string>
    <string name="erpeel">RPL</string>
    <string name="tekaje">TKJ</string>
    <string name="tejea">TJA</string>

    <string name="upload_bukti">Upload Bukti</string>
    <string name="laporkan_pelanggaran">Laporkan Pelanggaran</string>
    <string name="laporkan">Laporkan</string>

    <string name="contoh_nis">Contoh : 3103117342</string>
    <string name="nis">NIS</string>
    <string name="kategori_pasal">Pilih Pasal</string>
    <string name="pelanggaran">Pelanggaran</string>
    <string name="aktivitas_terbaru">Aktivitas Terbaru</string>
    <string name="fitur_buku_sakuku">Fitur Bukusaku</string>
    <string name="code">Kode</string>

    <string name="deskripsi">Deskripsi</string>

    <string name="point">Point</string>
    <string name="overview">Overview</string>
    <string name="jumlah_pelanggar">Jumlah Pelanggar</string>
    <string name="jumlah_siswa">Jumlah Siswa</string>
    <string name="pelanggaran_paling_sering">Pelanggaran Paling Sering</string>
    <string name="detail_3">Lainnya</string>
    <string name="detail_4">Tentang Kami</string>
    <string name="lagu1">Telkom Schools peduli anak negri</string>
    <string name="lagu2">Tuk berkembang dan berprestasi</string>
    <string name="lagu3">Untuk cinta dan citra negara</string>
    <string name="lagu">Memajukan Indonesia</string>
    <string name="lagu4">Memajukan Indonesia</string>
    <string name="lagu5">Telkom Schools membangun karya nyata</string>
    <string name="lagu6">Memberdayakan nusa bangsa</string>
    <string name="lagu7">Aspek pendidikan di semua kawasa</string>
    <string name="lagu8">Sluruh penjuru nusantara</string>
    <string name="lagu9">Kami berjanji mengembangkan potensi</string>
    <string name="lagu10">Bakti memajukan bangsa</string>
    <string name="lagu11">Untuk mengukir dan meraih prestasi</string>
    <string name="lagu12">Demi ibu pertiwi</string>
    <string name="lagu13">Bersama kita kan slalu mengabdi</string>
    <string name="lagu14">Tuk sejahterakan bangsa</string>
    <string name="lagu15">Dengan penuh tekad dan keikhlasan</string>
    <string name="lagu16">Telkom Schools selalu tetap jaya</string>
    <string name="detail_5">Hymne Telkom Shcools</string>
    <string name="nama_lengkap_detail">Nama Lengkap</string>
    <string name="rayhan_rafiud_darojat">Rayhan Rafiud Darojat</string>
    <string name="x_rpl_1">X RPL 1</string>
    <string name="jumlah_point">Jumlah Point</string>
    <string name="_100">100</string>
    <string name="jumlah_pelanggaran">Jumlah Pelanggaran</string>
    <string name="pelanggaran_yang_dilakukan">Pelanggaran yang dilakukan</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="_1">1</string>
    <string name="peraturan_item">Tata Tertib Peserta didik SMK Telkom Purwokerto adalah peraturan-peraturan yang telah ditetapkan oleh Sekolah yang harus ditaati dan dilaksanakan oleh seluruh peserta didik SMK Telkom Purwokerto</string>
    <string name="no_hp">No Hp</string>
    <string name="attach_images_title">Choose Image</string>
    <string name="searchsiswa">Search Siswa</string>
    <string name="foto_profile">Foto Profile</string>
    <string name="pilih_pelanggaran">Pilih Pelanggaran</string>
    <string name="sccpwt">\@sccpwt</string>
    <string name="stematelpwt">\@stematelpwt</string>
    <string-array name="RPL">
        <item>X RPL 1</item>
        <item>X RPL 1</item>
        <item>X RPL 2</item>
        <item>X RPL 3</item>
        <item>X RPL 4</item>
        <item>XI RPL 1</item>
        <item>XI RPL 2</item>
        <item>XI RPL 3</item>
        <item>XI RPL 4</item>
        <item>XII RPL 1</item>
        <item>XII RPL 2</item>
        <item>XII RPL 3</item>
        <item>XII RPL 4</item>
    </string-array>
    <string-array name="TJA">
        <item>choose one</item>
        <item>X TJA 1</item>
        <item>X TJA 2</item>
        <item>X TJA 3</item>
        <item>X TJA 4</item>
        <item>XI TJA 1</item>
        <item>XI TJA 2</item>
        <item>XI TJA 3</item>
        <item>XI TJA 4</item>
        <item>XII TJA 1</item>
        <item>XII TJA 2</item>
        <item>XII TJA 3</item>
        <item>XII TJA 4</item>
    </string-array>
    <string-array name="TKJ">
        <item>choose one</item>
        <item>X TKJ 1</item>
        <item>X TKJ 2</item>
        <item>X TKJ 3</item>
        <item>X TKJ 4</item>
        <item>XI TKJ 1</item>
        <item>XI TKJ 2</item>
        <item>XI TKJ 3</item>
        <item>XI TKJ 4</item>
        <item>XII TKJ 1</item>
        <item>XII TKJ 2</item>
        <item>XII TKJ 3</item>
        <item>XII TKJ 4</item>
    </string-array>
    <string-array name="spinner_kategori">
        <item>Nakal</item>
        <item>Rambut</item>
        <item>Telat</item>
        <item>Minggat</item>
        <item>Kesiangan</item>
        <item>Telat lagi</item>
        <item>Nakal banget</item>
        <item>apalagi ya</item>
        <item>cukup kayanya</item>
        <item>belum</item>
        <item>coba lagi</item>
        <item>belum lagi</item>
        <item>oke pas</item>
        <item>oke</item>
    </string-array>
    <string name="igscc" translatable="false">https://www.instagram.com/sccpwt/</string>
    <string name="igstematel" translatable="false">https://www.instagram.com/stematelpwt/</string>

    <string name="igrafiud" translatable="false">https://www.instagram.com/rafiudd_/</string>
    <string name="igdafarz" translatable="false">https://www.instagram.com/rz.dfrz</string>
    <string name="iggawang" translatable="false">https://www.instagram.com/ganar.gatul/</string>
    <string name="igfakhrul" translatable="false">https://www.instagram.com/sccpwt/</string>
    <string name="igfaresa" translatable="false">https://www.instagram.com/faresa_pn/</string>
    <string name="igsindi" translatable="false">https://www.instagram.com/sindylail/</string>
    <string name="igyudhan" translatable="false">https://www.instagram.com/yudhan.jeffri/</string>
    <string name="igbagas" translatable="false">https://www.instagram.com/bagas_makhali/</string>
    <string name="igdafa" translatable="false">https://www.instagram.com/dafaaaap/</string>

</resources>
