<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.scc.bukusakuonline.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.scc.bukusakuonline.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />



    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.scc.bukusakuonline.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.scc.bukusakuonline.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_pengaduan"
        android:name="com.scc.bukusakuonline.ui.pengaduan.PengaduanFragment"
        android:label="@string/pengaduan"
        tools:layout="@layout/fragment_pengaduan">
    </fragment>
</navigation>