<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F8F8F8"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.daftarkelas.DaftarKelas">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" >
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_height="wrap_content"
            android:text="Daftar Kelas"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_gravity="center" />

    </androidx.appcompat.widget.Toolbar>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:tabSelectedTextColor="@color/colorWhite"
        app:tabTextColor="#000"
        android:layout_height="wrap_content">
        <com.google.android.material.tabs.TabItem
            android:id="@+id/rpl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/erpeel"
            />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tkj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tekaje"
            >

        </com.google.android.material.tabs.TabItem>
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tejea"
           />

    </com.google.android.material.tabs.TabLayout>
    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:id="@+id/viewpager"
        android:layout_height="wrap_content">

    </androidx.viewpager.widget.ViewPager>
</LinearLayout>