<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailPelanggaran">
    <LinearLayout
        android:paddingTop="32dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="151dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">
            <ImageView
                android:layout_width="320dp"
                android:layout_height="match_parent"
                android:layout_gravity=""
                android:contentDescription="@string/bukti"
                android:src="@drawable/cukur" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="24dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="12sp"
                android:text="@string/nama_lengkap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="14sp"
                android:textColor="#454545"
                android:layout_marginTop="6dp"
                tools:text="Rayhan Rafiud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:layout_marginTop="16dp"
            android:background="@drawable/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="24dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="12sp"
                android:text="@string/kelas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="14sp"
                android:textColor="#454545"
                android:layout_marginTop="6dp"
                tools:text="Rayhan Rafiud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:layout_marginTop="16dp"
            android:background="@drawable/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="24dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="12sp"
                android:text="@string/kategori_pelanggaran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="14sp"
                android:textColor="#454545"
                android:layout_marginTop="6dp"
                tools:text="Rayhan Rafiud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:layout_marginTop="16dp"
            android:background="@drawable/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="24dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="12sp"
                android:text="@string/point_pelanggaran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="14sp"
                android:textColor="#454545"
                android:layout_marginTop="6dp"
                tools:text="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:layout_marginTop="16dp"
            android:background="@drawable/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="24dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="12sp"
                android:text="@string/aturan_yang_dilanggar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="14sp"
                android:textColor="#454545"
                android:layout_marginTop="6dp"
                tools:text="Rayhan Rafiud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:layout_marginTop="16dp"
            android:background="@drawable/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="24dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="12sp"
                android:text="@string/pelapor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="14sp"
                android:textColor="#454545"
                android:layout_marginTop="6dp"
                tools:text="Rayhan Rafiud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:layout_marginTop="16dp"
            android:background="@drawable/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>