<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    style="@style/AppTheme"
    android:paddingStart="20dp"
    android:paddingEnd="21dp"
    android:orientation="vertical"
    tools:context=".ui.pengaduan.PengaduanFragment"
    android:paddingLeft="20dp"
    android:paddingRight="21dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nis"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_edittext_spinner_pengaduan"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardCornerRadius="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText_spinner_pengaduan"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@drawable/edittext_without_underline"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/contoh_nis"
                android:inputType="number"
                android:textColorHint="@color/gray"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pelanggaran"/>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/card_spinner_kategori"
        app:cardCornerRadius="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/spinner_kategori"
                style="@style/SpinnerTheme"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/card_spinner_pasal"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="5dp"
        android:layout_height="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/spinner_pasal"
                style="@style/SpinnerTheme"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="120dp"
       android:layout_height="120dp">

       <ImageButton
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:id="@+id/imageButton3"
           style="@style/ImageButtonBg"
           android:background="@drawable/btn_image_bg"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:fontFamily="@font/roboto_medium"
           android:hint="@string/upload_bukti"
           android:textColorHint="@color/colorWhite"
           app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
           app:layout_constraintEnd_toEndOf="@+id/imageButton3"
           app:layout_constraintStart_toStartOf="@+id/imageButton3"
           app:layout_constraintTop_toTopOf="@+id/imageButton3" />
   </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/colorWhite"
        android:text="@string/laporkan"
        android:textAllCaps="false"/>
    </LinearLayout>
</LinearLayout>